--- a/SCADA_server/package.json
+++ b/SCADA_server/package.json
@@ -3,21 +3,24 @@
   "version": "1.0.0",
   "scripts": {
     "start": "node --trace-warnings dist/test/PlcModbusControllerTest.js",
-    "test": "cls && tsc && jest --verbose --coverage",
+    "test": "cls && tsc && vitest --run --coverage --reporter=verbose",
     "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@jest/globals": "^29.7.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.13",
     "@types/node": "^22.5.0",
     "@types/pg": "^8.11.10",
-    "ts-jest": "^29.2.5",
-    "typescript": "^5.5.4"
+    "@vitest/coverage-v8": "^2.1.3",
+    "ava": "^6.1.3",
+    "c8": "^10.1.2",
+    "sinon": "^19.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.3"
   },
   "dependencies": {
     "cors": "^2.8.5",
