--- a/SCADA_server/package.json
+++ b/SCADA_server/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.0",
     "@types/pg": "^8.11.10",
+    "@types/sinon": "^17.0.3",
     "@vitest/coverage-v8": "^2.1.3",
     "ava": "^6.1.3",
     "c8": "^10.1.2",
