--- a/SCADA_server/package.json
+++ b/SCADA_server/package.json
@@ -2,7 +2,7 @@
   "name": "scada_server",
   "version": "1.0.0",
   "scripts": {
-    "start": "node --trace-warnings dist/test/PlcModbusControllerTest.js",
+    "start": "cls && tsc && node --trace-warnings dist/main/server.js",
     "test": "cls && tsc && vitest --run --coverage --reporter=verbose",
     "build": "tsc"
   },
@@ -15,6 +15,7 @@
     "@types/node": "^22.5.0",
     "@types/pg": "^8.11.10",
     "@types/sinon": "^17.0.3",
+    "@types/supertest": "^6.0.2",
     "@vitest/coverage-v8": "^2.1.3",
     "ava": "^6.1.3",
     "c8": "^10.1.2",
@@ -27,7 +28,8 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsmodbus": "^4.0.10",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "supertest": "^7.0.0"
   },
   "main": "index.js",
   "description": ""
