--- a/SCADA_server/package.json
+++ b/SCADA_server/package.json
@@ -1,36 +1,44 @@
 {
-  "name": "scada_server",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "cls && tsc && node --trace-warnings dist/main/server.js",
-    "test": "cls && tsc && vitest --run --coverage --reporter=verbose",
-    "build": "tsc"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/node": "^22.5.0",
-    "@types/pg": "^8.11.10",
-    "@types/sinon": "^17.0.3",
-    "@types/supertest": "^6.0.2",
-    "@vitest/coverage-v8": "^2.1.3",
-    "ava": "^6.1.3",
-    "c8": "^10.1.2",
-    "sinon": "^19.0.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
-    "vitest": "^2.1.3"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "jsmodbus": "^4.0.10",
-    "pg": "^8.13.0",
-    "supertest": "^7.0.0"
-  },
-  "main": "index.js",
-  "description": ""
+    "name": "scada_server",
+    "version": "1.0.0",
+    "scripts": {
+        "start": "cls && tsc && node --trace-warnings dist/main/server.js",
+        "test": "cls && tsc && vitest --run --coverage --reporter=verbose",
+        "build": "tsc"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@eslint/js": "^9.13.0",
+        "@types/cors": "^2.8.17",
+        "@types/eslint__js": "^8.42.3",
+        "@types/express": "^4.17.21",
+        "@types/node": "^22.5.0",
+        "@types/pg": "^8.11.10",
+        "@types/sinon": "^17.0.3",
+        "@types/supertest": "^6.0.2",
+        "@typescript-eslint/eslint-plugin": "^8.12.2",
+        "@typescript-eslint/parser": "^8.12.2",
+        "@vitest/coverage-v8": "^2.1.3",
+        "c8": "^10.1.2",
+        "eslint": "^9.13.0",
+        "eslint-config-prettier": "^9.1.0",
+        "globals": "^15.11.0",
+        "prettier": "^3.3.3",
+        "sinon": "^19.0.2",
+        "supertest": "^7.0.0",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.6.3",
+        "typescript-eslint": "^8.12.2",
+        "vitest": "^2.1.3"
+    },
+    "dependencies": {
+        "cors": "^2.8.5",
+        "express": "^4.19.2",
+        "jsmodbus": "^4.0.10",
+        "pg": "^8.13.0"
+    },
+    "main": "index.js",
+    "description": ""
 }
