--- a/SCADA_server/.prettierrc.json
+++ b/SCADA_server/.prettierrc.json
@@ -1,6 +1,9 @@
 {
-  "semi": false,
-  "trailingComma": "all",
-  "singleQuote": true,
-  "tabWidth": 4
+    "semi": false,
+    "trailingComma": "none",
+    "singleQuote": true,
+    "tabWidth": 4,
+    "printWidth": 120,
+    "bracketSameLine": true,
+    "arrowParens": "avoid"
 }
