--- a/SCADA_client/package.json
+++ b/SCADA_client/package.json
@@ -4,9 +4,10 @@
     "main": "src/main/node/main.js",
     "type": "module",
     "scripts": {
-        "start": "tsc && electron src/main/node/main.js",
-        "build": "tsc",
-        "test": "vitest run --coverage"
+        "start": "tsc && npm run copy-static && electron dist/main/node/main.js",
+        "build": "tsc && npm run copy-static",
+        "test": "vitest run --coverage",
+        "copy-static": "cpx \"src/**/*.{svg,css,html}\" dist"
     },
     "keywords": [],
     "author": "",
@@ -23,6 +24,7 @@
         "@typescript-eslint/parser": "^8.14.0",
         "@vitest/coverage-v8": "^2.1.4",
         "c8": "^10.1.2",
+        "cpx2": "^8.0.0",
         "electron": "^32.0.1",
         "eslint": "^9.14.0",
         "eslint-config-prettier": "^9.1.0",
