--- a/SCADA_client/package.json
+++ b/SCADA_client/package.json
@@ -6,8 +6,8 @@
     "scripts": {
         "start": "tsc && npm run copy-static && electron dist/main/node/main.js",
         "build": "tsc && npm run copy-static",
-        "test": "vitest run --coverage",
-        "copy-static": "cpx \"src/**/*.{svg,css,html}\" dist"
+        "test": "clear && vitest run --coverage",
+        "copy-static": "cpx \"src/**/*.{svg,css,html,js}\" dist"
     },
     "keywords": [],
     "author": "",
@@ -18,6 +18,7 @@
         "@types/electron": "^1.4.38",
         "@types/eslint__js": "^8.42.3",
         "@types/express": "^4.17.21",
+        "@types/jsdom": "^21.1.7",
         "@types/node": "^22.5.0",
         "@types/sinon": "^17.0.3",
         "@typescript-eslint/eslint-plugin": "^8.14.0",
